feat: waiting list pixel perfect, no responsive

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,33 @@
   <meta charset="utf-8">
   <title>ProjectBuilderWeb</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link as="object" crossorigin href="/assets/svg/bg-patterns.svg" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Black.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Black.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Bold.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Bold.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-ExtraBold.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-ExtraBold.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-ExtraBoldItalic.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-ExtraBoldItalic.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-BoldItalic.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-BoldItalic.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Italic.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Italic.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Medium.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Medium.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Light.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Light.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-ExtraLight.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-ExtraLight.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-MediumItalic.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-MediumItalic.woff2" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Regular.woff" rel="preload">
+  <link as="font" crossorigin href="/assets/fonts/Poppins-Regular.woff2" rel="preload">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
