feat: waiting list pixel perfect, no responsive

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link as="video" crossorigin href="/assets/media/project-builder-2.mp4" rel="preload">
   <link as="object" crossorigin href="/assets/svg/bg-patterns.svg" rel="preload">
   <link as="font" crossorigin href="/assets/fonts/Poppins-Black.woff2" rel="preload">
   <link as="font" crossorigin href="/assets/fonts/Poppins-Black.woff" rel="preload">
